[package]
name = "color_map"
version = "0.1.0"
authors = ["skeletaljazzwizard <alexanderbrhoda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.1"
image = "0.23.6"
termcolor = "1.1"
